# AtlasBot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.cargo/: config.toml
apps/atlas-cli/: Cargo.toml
apps/atlas-daemon/: Cargo.toml
apps/atlas-daemon/src/: main.rs
crates/atlas-common/: Cargo.toml
crates/atlas-core/: Cargo.toml
crates/atlas-infra/: Cargo.toml
crates/atlas-protocol/: Cargo.toml
crates/atlas-sandbox/: Cargo.toml
