[workspace]
members = [
    "crates/atlas-infra",
    "crates/atlas-core",
    "crates/atlas-sandbox",
    "crates/atlas-protocol",
    "crates/atlas-common",
    "apps/atlas-daemon",
    "apps/atlas-cli",
    # extensions 后面再加
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Jonas"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
